--- a/public/css/skin-black-custom.css
+++ b/public/css/skin-black-custom.css
@@ -190,7 +190,7 @@ a:hover{
 }
 .login-page, .register-page{
 	background-color: #282828;
-	background-image: url("../images/background.png");
+	background-image: url("../images/background.jpg");
 }
 .login-logo a, .register-logo a{
 	color: #f0f0f0;
@@ -253,4 +253,8 @@ span.select2.select2-container{width:100%!important;}
 
 .select2-container--default.select2-container--disabled .select2-selection--single{
     background: transparent;
+}
+
+.dropdown-menu{
+	z-index: 10000 !important;
 }
